update js and css

--- a/public/css/custom-select.css
+++ b/public/css/custom-select.css
@@ -20,3 +20,6 @@ esempio: @include focusCta;
   cursor: pointer;
   width: 100%;
   height: 40px; }
+
+.custom-select-group ul {
+  padding-left: 0; }
