--- a/public/css/custom-select.css
+++ b/public/css/custom-select.css
@@ -16,10 +16,10 @@ esempio: @include focusCta;
 .custom-select-group .custom-select-wrapper {
   display: none; }
 
-.custom-select-group button {
-  cursor: pointer;
+.custom-select-group .custom-select-button {
+  border: 1px solid;
   width: 100%;
-  height: 40px; }
+  padding: 10px; }
 
-.custom-select-group ul {
+.custom-select-group .custom-select-list-options {
   padding-left: 0; }
