--- a/public/css/custom-select.css
+++ b/public/css/custom-select.css
@@ -17,12 +17,15 @@ esempio: @include focusCta;
   display: none; }
 
 .custom-select-group .custom-select-button {
+  border-radius: 4px;
   border: 1px solid;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 48px; }
+  padding: 0 10px;
+  height: 48px;
+  background-color: #fff; }
 
 .custom-select-group .custom-select-options-list {
   display: none;
