--- a/src/styles/components/_custom-select.scss
+++ b/src/styles/components/_custom-select.scss
@@ -3,35 +3,40 @@
         display: none;
     }
 
-    .custom-select-button{
+    .custom-select-button {
+        border-radius: 4px;
         border: 1px solid;
         width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 0 10px;
         height: 48px;
+        background-color: $white;
     }
 
-    .custom-select-options-list{
+    .custom-select-options-list {
         display: none;
         list-style: none;
         padding-left: 0;
         margin-bottom: 0;
         border: 1px solid;
 
-        &--item{
+        &--item {
             display: block;
             padding: 10px;
 
-            &:hover, &:focus, &.active{
+            &:hover,
+            &:focus,
+            &.active {
                 background-color: $background-color;
                 color: $white;
             }
         }
     }
 
-    &.open{
-        .custom-select-options-list{
+    &.open {
+        .custom-select-options-list {
             display: block;
         }
     }
