--- a/public/css/custom-select.css
+++ b/public/css/custom-select.css
@@ -18,7 +18,7 @@ esempio: @include focusCta;
 
 .custom-select-group .custom-select-button {
   border-radius: 4px;
-  border: 1px solid;
+  border: 1px solid #454D56;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -26,13 +26,23 @@ esempio: @include focusCta;
   padding: 0 10px;
   height: 48px;
   background-color: #fff; }
+  .custom-select-group .custom-select-button::after {
+    content: "";
+    display: flex;
+    background-image: url(../assets/images/arrow.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 16px;
+    height: 16px; }
 
 .custom-select-group .custom-select-options-list {
   display: none;
   list-style: none;
   padding-left: 0;
   margin-bottom: 0;
-  border: 1px solid; }
+  border: 1px solid #454D56;
+  max-height: 225px;
+  overflow-y: auto; }
   .custom-select-group .custom-select-options-list--item {
     display: block;
     padding: 10px; }
@@ -42,3 +52,20 @@ esempio: @include focusCta;
 
 .custom-select-group.open .custom-select-options-list {
   display: block; }
+
+.custom-select-group.open .custom-select-button::after {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg); }
+
+.custom-select-group ::-webkit-scrollbar {
+  width: 10px; }
+
+.custom-select-group ::-webkit-scrollbar-track {
+  background-color: #ccc; }
+
+.custom-select-group ::-webkit-scrollbar-thumb {
+  background: #454D56; }
+
+.custom-select-group ::-webkit-scrollbar-thumb:hover {
+  background: #454D56; }
