--- a/src/styles/components/_custom-select.scss
+++ b/src/styles/components/_custom-select.scss
@@ -5,7 +5,7 @@
 
     .custom-select-button {
         border-radius: 4px;
-        border: 1px solid;
+        border: 1px solid $border-color;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -13,6 +13,16 @@
         padding: 0 10px;
         height: 48px;
         background-color: $white;
+
+        &::after {
+            content: "";
+            display: flex;
+            background-image: url(../assets/images/arrow.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 16px;
+            height: 16px;
+        }
     }
 
     .custom-select-options-list {
@@ -20,7 +30,9 @@
         list-style: none;
         padding-left: 0;
         margin-bottom: 0;
-        border: 1px solid;
+        border: 1px solid $border-color;
+        max-height: 225px;
+        overflow-y: auto;
 
         &--item {
             display: block;
@@ -39,6 +51,32 @@
         .custom-select-options-list {
             display: block;
         }
+
+        .custom-select-button {
+            &::after {
+                transform: rotate(180deg);
+                -webkit-transform: rotate(180deg);
+                -moz-transform: rotate(180deg);
+            }
+        }
+    }
+
+    // scrollbar
+
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: $grey;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: $border-color;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: $border-color;
     }
 
 }
