--- a/public/css/custom-select.css
+++ b/public/css/custom-select.css
@@ -39,7 +39,7 @@ esempio: @include focusCta;
   display: none;
   list-style: none;
   padding-left: 0;
-  margin-bottom: 0;
+  margin: 0;
   border: 1px solid #454D56;
   max-height: 225px;
   overflow-y: auto; }
