--- a/src/styles/components/_custom-select.scss
+++ b/src/styles/components/_custom-select.scss
@@ -29,7 +29,7 @@
         display: none;
         list-style: none;
         padding-left: 0;
-        margin-bottom: 0;
+        margin: 0;
         border: 1px solid $border-color;
         max-height: 225px;
         overflow-y: auto;
