--- a/src/styles/components/_custom-select.scss
+++ b/src/styles/components/_custom-select.scss
@@ -61,6 +61,31 @@
         }
     }
 
+    &.custom-multiselect {
+        .custom-select-options-list {
+            &--item {
+                position: relative;
+
+                &.active {
+                    &::after {
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        right: 10px;
+                        top: 10px;
+                        background-image: url(../assets/images/check.svg);
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-size: cover;
+                        width: 16px;
+                        height: 16px;
+                    }
+
+                }
+            }
+        }
+    }
+
     // scrollbar
 
     ::-webkit-scrollbar {
