--- a/public/css/custom-select.css
+++ b/public/css/custom-select.css
@@ -13,74 +13,91 @@ esempio: @include placeholder(#f00);
 /* placeholder per cta generiche
 esempio: @include focusCta;
 */
-.custom-select-group .custom-select-wrapper {
-  display: none; }
-
-.custom-select-group .custom-select-button {
-  border-radius: 4px;
-  border: 1px solid #454D56;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 10px;
-  height: 48px;
-  background-color: #fff; }
-  .custom-select-group .custom-select-button::after {
-    content: "";
-    display: flex;
-    background-image: url(../assets/images/arrow.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 16px;
-    height: 16px; }
-
-.custom-select-group .custom-select-options-list {
-  display: none;
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-  border: 1px solid #454D56;
-  max-height: 225px;
-  overflow-y: auto; }
-  .custom-select-group .custom-select-options-list--item {
-    display: block;
-    padding: 10px; }
-    .custom-select-group .custom-select-options-list--item:hover, .custom-select-group .custom-select-options-list--item:focus, .custom-select-group .custom-select-options-list--item.active {
-      background-color: #0059b3;
-      color: #fff; }
-
-.custom-select-group.open .custom-select-options-list {
-  display: block; }
-
-.custom-select-group.open .custom-select-button::after {
-  transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg); }
-
-.custom-select-group.custom-multiselect .custom-select-options-list--item {
+.custom-select-group {
   position: relative; }
-  .custom-select-group.custom-multiselect .custom-select-options-list--item.active::after {
-    content: "";
-    display: block;
+  .custom-select-group .custom-select-wrapper {
+    display: none; }
+  .custom-select-group .custom-select-button {
+    border-radius: 4px;
+    border: 1px solid #454D56;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    height: 48px;
+    background-color: #fff;
+    cursor: pointer; }
+    .custom-select-group .custom-select-button::after {
+      content: "";
+      display: flex;
+      background-image: url(../assets/images/arrow.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 16px;
+      height: 16px; }
+  .custom-select-group .custom-select-list-container {
+    display: none;
     position: absolute;
-    right: 10px;
-    top: 10px;
-    background-image: url(../assets/images/check.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 16px;
-    height: 16px; }
-
-.custom-select-group ::-webkit-scrollbar {
-  width: 10px; }
-
-.custom-select-group ::-webkit-scrollbar-track {
-  background-color: #ccc; }
-
-.custom-select-group ::-webkit-scrollbar-thumb {
-  background: #454D56; }
-
-.custom-select-group ::-webkit-scrollbar-thumb:hover {
-  background: #454D56; }
+    width: 100%;
+    border: 1px solid #454D56;
+    background-color: #fff;
+    z-index: 1; }
+    .custom-select-group .custom-select-list-container .custom-select-options-list {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+      max-height: 225px;
+      overflow-y: auto; }
+      .custom-select-group .custom-select-list-container .custom-select-options-list--item {
+        display: block;
+        padding: 10px; }
+        .custom-select-group .custom-select-list-container .custom-select-options-list--item:hover, .custom-select-group .custom-select-list-container .custom-select-options-list--item:focus, .custom-select-group .custom-select-list-container .custom-select-options-list--item.active {
+          background-color: #0059b3;
+          color: #fff; }
+    .custom-select-group .custom-select-list-container .livesearch-container {
+      display: flex; }
+      .custom-select-group .custom-select-list-container .livesearch-container .livesearch-label {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0; }
+      .custom-select-group .custom-select-list-container .livesearch-container .livesearch-input {
+        width: 100%;
+        padding: 0 10px;
+        height: 48px;
+        margin: 8px;
+        border: 1px solid #454D56; }
+  .custom-select-group.open .custom-select-list-container {
+    display: block; }
+  .custom-select-group.open .custom-select-button::after {
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg); }
+  .custom-select-group.custom-multiselect .custom-select-options-list--item {
+    position: relative; }
+    .custom-select-group.custom-multiselect .custom-select-options-list--item.active::after {
+      content: "";
+      display: block;
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      background-image: url(../assets/images/check.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      width: 16px;
+      height: 16px; }
+  .custom-select-group ::-webkit-scrollbar {
+    width: 10px; }
+  .custom-select-group ::-webkit-scrollbar-track {
+    background-color: #ccc; }
+  .custom-select-group ::-webkit-scrollbar-thumb {
+    background: #454D56; }
+  .custom-select-group ::-webkit-scrollbar-thumb:hover {
+    background: #454D56; }
